--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,8 @@
     <script src="/static/jquery-3.4.1.min.js"></script>
     <script src="/static/Chart.min.js"></script>
     <style href="/static/Chart.min.css"></style>
-    <title>Flask Index</title>
+    <link rel="shortcut icon" href="/static/favicon.png">
+    <title>Kanban Meter</title>
 </head>
 
 <body>
@@ -49,7 +50,7 @@
         }
     </style>
 
-    <h1>Jira issue point report</h1>
+    <h1>Jira Cloud kanban velocity meter</h1>
     <div>
         <input type='text' id='input_jql'>
     </div>
